--- a/src/App.css
+++ b/src/App.css
@@ -12,6 +12,7 @@ height: 100%;
 .btn-container{
   display: flex;
   justify-content: space-around;
+  align-items: center;
   margin: 30px 0 0;
   width: 100%;
 }
